Fixed #24 socket_error undefined

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-Version 0.3.5
+Version 0.3.6
 -------------
 
-Added missing Gunicorn worker
+- Added missing Gunicorn worker
+- Resolved #24 socket_error undefined
